prost-canonical-serde/tests/ui/invalid_rename_all.stderr
error: unsupported rename_all case convention
 --> tests/ui/invalid_rename_all.rs:4:38
  |
4 | #[prost_canonical_serde(rename_all = "title_case")]
  |                                      ^^^^^^^^^^^^
